2026R1/Mechanical-ACT-API-26-r1/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/DataModel/MechanicalEnums/Table/VariableType.md
# `VariableType`

<a id="ansys.mechanical.stubs.v252.Ansys.Mechanical.DataModel.MechanicalEnums.Table.VariableType"></a>

#### *class* Ansys.Mechanical.DataModel.MechanicalEnums.Table.VariableType(\*args, \*\*kwds)

Bases: [`enum.Enum`](https://docs.python.org/3/library/enum.html#enum.Enum)

An enumeration of the different variable types supported by the tabular data
T:Ansys.Mechanical.Interfaces.IDataSeries implementation “Ansys.ACT.Automation.Mechanical.Table.Column”.

<!-- !! processed by numpydoc !! -->

<a id="overview"></a>

## Overview

### Attributes

| Name |
| ---------------------------------------------------------------------------------------------------------- |
| [`AverageFilmTemperature`](#VariableType.AverageFilmTemperature) |
| [`BulkTemperature`](#VariableType.BulkTemperature) |
| [`DifferenceBetweenSurfaceAndBulkTemperature`](#VariableType.DifferenceBetweenSurfaceAndBulkTemperature) |
| [`HeatTransferCoefficient`](#VariableType.HeatTransferCoefficient) |
| [`ID`](#VariableType.ID) |
| [`Pressure`](#VariableType.Pressure) |
| [`StrainScalingFactor`](#VariableType.StrainScalingFactor) |
| [`SurfaceTemperature`](#VariableType.SurfaceTemperature) |
| [`Temperature`](#VariableType.Temperature) |
| [`ThetaCoordinate`](#VariableType.ThetaCoordinate) |
| [`Time`](#VariableType.Time) |
| [`XCoordinate`](#VariableType.XCoordinate) |
| [`YCoordinate`](#VariableType.YCoordinate) |
| [`ZCoordinate`](#VariableType.ZCoordinate) |

<a id="attribute-detail"></a>

## Attribute detail

<a id="VariableType.AverageFilmTemperature"></a>

### VariableType.AverageFilmTemperature *= 8*

<a id="VariableType.BulkTemperature"></a>

### VariableType.BulkTemperature *= 9*

<a id="VariableType.DifferenceBetweenSurfaceAndBulkTemperature"></a>

### VariableType.DifferenceBetweenSurfaceAndBulkTemperature *= 11*

<a id="VariableType.HeatTransferCoefficient"></a>

### VariableType.HeatTransferCoefficient *= 5*

<a id="VariableType.ID"></a>

### VariableType.ID *= 3*

<a id="VariableType.Pressure"></a>

### VariableType.Pressure *= 4*

<a id="VariableType.StrainScalingFactor"></a>

### VariableType.StrainScalingFactor *= 17*

<a id="VariableType.SurfaceTemperature"></a>

### VariableType.SurfaceTemperature *= 10*

<a id="VariableType.Temperature"></a>

### VariableType.Temperature *= 7*

<a id="VariableType.ThetaCoordinate"></a>

### VariableType.ThetaCoordinate *= 12*

<a id="VariableType.Time"></a>

### VariableType.Time *= 13*

<a id="VariableType.XCoordinate"></a>

### VariableType.XCoordinate *= 14*

<a id="VariableType.YCoordinate"></a>

### VariableType.YCoordinate *= 15*

<a id="VariableType.ZCoordinate"></a>

### VariableType.ZCoordinate *= 16*


