2026R1/Mechanical-ACT-API-26-r1/api/ansys/mechanical/stubs/v261/Ansys/Mechanical/DataModel/MechanicalEnums/Table/VariableType.md
# `VariableType`

<a id="ansys.mechanical.stubs.v261.Ansys.Mechanical.DataModel.MechanicalEnums.Table.VariableType"></a>

#### *class* Ansys.Mechanical.DataModel.MechanicalEnums.Table.VariableType(\*args, \*\*kwds)

Bases: [`enum.Enum`](https://docs.python.org/3/library/enum.html#enum.Enum)

An enumeration of the different variable types supported by the tabular data
T:Ansys.Mechanical.Interfaces.IDataSeries implementation “Ansys.ACT.Automation.Mechanical.Table.Column”.

<!-- !! processed by numpydoc !! -->

<a id="overview"></a>

## Overview

### Attributes

| Name |
| ---------------------------------------------------------------------------------------------------------- |
| [`Angle`](#VariableType.Angle) |
| [`AverageFilmTemperature`](#VariableType.AverageFilmTemperature) |
| [`BulkTemperature`](#VariableType.BulkTemperature) |
| [`CyclicSectorNumber`](#VariableType.CyclicSectorNumber) |
| [`DifferenceBetweenSurfaceAndBulkTemperature`](#VariableType.DifferenceBetweenSurfaceAndBulkTemperature) |
| [`Dimensionless`](#VariableType.Dimensionless) |
| [`ElementNumber`](#VariableType.ElementNumber) |
| [`GeometricGap`](#VariableType.GeometricGap) |
| [`HarmonicBasedLoad`](#VariableType.HarmonicBasedLoad) |
| [`HeatFlux`](#VariableType.HeatFlux) |
| [`HeatGeneration`](#VariableType.HeatGeneration) |
| [`HeatTransferCoefficient`](#VariableType.HeatTransferCoefficient) |
| [`HeatTransferRate`](#VariableType.HeatTransferRate) |
| [`ID`](#VariableType.ID) |
| [`Length`](#VariableType.Length) |
| [`MultistageHarmonicIndex`](#VariableType.MultistageHarmonicIndex) |
| [`NodeNumber`](#VariableType.NodeNumber) |
| [`PhaseShift`](#VariableType.PhaseShift) |
| [`Pressure`](#VariableType.Pressure) |
| [`RotationalVelocityVectorAmplitude`](#VariableType.RotationalVelocityVectorAmplitude) |
| [`Strain`](#VariableType.Strain) |
| [`SurfaceTemperature`](#VariableType.SurfaceTemperature) |
| [`Temperature`](#VariableType.Temperature) |
| [`ThetaCoordinate`](#VariableType.ThetaCoordinate) |
| [`Time`](#VariableType.Time) |
| [`Velocity`](#VariableType.Velocity) |
| [`XCoordinate`](#VariableType.XCoordinate) |
| [`YCoordinate`](#VariableType.YCoordinate) |
| [`ZCoordinate`](#VariableType.ZCoordinate) |

<a id="attribute-detail"></a>

## Attribute detail

<a id="VariableType.Angle"></a>

### VariableType.Angle *= 1*

<a id="VariableType.AverageFilmTemperature"></a>

### VariableType.AverageFilmTemperature *= 10*

<a id="VariableType.BulkTemperature"></a>

### VariableType.BulkTemperature *= 11*

<a id="VariableType.CyclicSectorNumber"></a>

### VariableType.CyclicSectorNumber *= 26*

<a id="VariableType.DifferenceBetweenSurfaceAndBulkTemperature"></a>

### VariableType.DifferenceBetweenSurfaceAndBulkTemperature *= 13*

<a id="VariableType.Dimensionless"></a>

### VariableType.Dimensionless *= 2*

<a id="VariableType.ElementNumber"></a>

### VariableType.ElementNumber *= 27*

<a id="VariableType.GeometricGap"></a>

### VariableType.GeometricGap *= 28*

<a id="VariableType.HarmonicBasedLoad"></a>

### VariableType.HarmonicBasedLoad *= 29*

<a id="VariableType.HeatFlux"></a>

### VariableType.HeatFlux *= 22*

<a id="VariableType.HeatGeneration"></a>

### VariableType.HeatGeneration *= 23*

<a id="VariableType.HeatTransferCoefficient"></a>

### VariableType.HeatTransferCoefficient *= 7*

<a id="VariableType.HeatTransferRate"></a>

### VariableType.HeatTransferRate *= 24*

<a id="VariableType.ID"></a>

### VariableType.ID *= 5*

<a id="VariableType.Length"></a>

### VariableType.Length *= 14*

<a id="VariableType.MultistageHarmonicIndex"></a>

### VariableType.MultistageHarmonicIndex *= 30*

<a id="VariableType.NodeNumber"></a>

### VariableType.NodeNumber *= 31*

<a id="VariableType.PhaseShift"></a>

### VariableType.PhaseShift *= 32*

<a id="VariableType.Pressure"></a>

### VariableType.Pressure *= 6*

<a id="VariableType.RotationalVelocityVectorAmplitude"></a>

### VariableType.RotationalVelocityVectorAmplitude *= 25*

<a id="VariableType.Strain"></a>

### VariableType.Strain *= 20*

<a id="VariableType.SurfaceTemperature"></a>

### VariableType.SurfaceTemperature *= 12*

<a id="VariableType.Temperature"></a>

### VariableType.Temperature *= 9*

<a id="VariableType.ThetaCoordinate"></a>

### VariableType.ThetaCoordinate *= 15*

<a id="VariableType.Time"></a>

### VariableType.Time *= 16*

<a id="VariableType.Velocity"></a>

### VariableType.Velocity *= 33*

<a id="VariableType.XCoordinate"></a>

### VariableType.XCoordinate *= 17*

<a id="VariableType.YCoordinate"></a>

### VariableType.YCoordinate *= 18*

<a id="VariableType.ZCoordinate"></a>

### VariableType.ZCoordinate *= 19*


